2003-02-13  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_io.h: Add CYG_MACRO_START/END markers to match
	recent changes in arch code.

	* cdl/hal_arm_edb7xxx.cdl: Builds without RedBoot+Linux-exec
	were broken by recent changes.

2003-02-12  Gary Thomas  <gary@mlbassoc.com>

	* include/plf_io.h: Provide proper memory layout for EDB7312.

2003-02-06  Gary Thomas  <gary@mind.be>

	* misc/edb7312_redboot_ROMRAM.ecm: 
	* src/edb7xxx_misc.c: 
	* include/plf_io.h: 
	* include/hal_platform_setup.h: 
	* cdl/hal_arm_edb7xxx.cdl: Add support for booting Linux by defining
	CYGARC_PHYSICAL_ADDRESS().

2002-12-06  Gary Thomas  <gthomas@ecoscentric.com>

	* misc/edb7312_redboot_ROMRAM.ecm: 
	* misc/edb7312_redboot_ROM.ecm: 
	* misc/edb7312_redboot_RAM.ecm: 
	* misc/edb7212_redboot_ROM.ecm: 
	* misc/edb7212_redboot.ecm: 
	* misc/edb7211_redboot_ROM.ecm: 
	* misc/edb7211_redboot.ecm: Force no 'Linux exec' command in RedBoot.

2002-08-02  Gary Thomas  <gary@chez-thomas.org>

	* cdl/hal_arm_edb7xxx.cdl: Clean up CDL.

2002-05-07  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_arm_edb7xxx.cdl: 
	Standardize CYGNUM_HAL_VIRTUAL_VECTOR_CONSOLE_CHANNEL_DEFAULT usage.

2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>

	* misc/i2s_audio_fiq.S:
	Don't use .file as it can confuse debugging since the .file
	doesn't contain the path and therefore the debugger will never
	know where it lives! This conflicts with using -Wa,--gstabs.

2002-03-21  Jonathan Larmour  <jlarmour@redhat.com>

	* misc/edb7312_redboot_RAM.ecm: memalloc package no longer required.
	* misc/edb7312_redboot_ROM.ecm: Ditto.
	* misc/edb7312_redboot_ROMRAM.ecm: Ditto.

2002-03-21  Hugo Tyson  <hmt@redhat.com>

	* include/hal_edb7xxx.h: Include the package config file too; some
	versions need to be told their clock setup to select
	initialization constants in this file.  It remains
	assembler-clean, no problem.

2002-03-05  Jesper Skov  <jskov@redhat.com>

	* misc/edb7312_redboot_RAM.ecm: Added memalloc package.